--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,8 @@
+* {
+    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
 html,body{
     margin: 0;
     padding: 0;
@@ -16,8 +21,7 @@ h1 {
 }
 
 span {
-    /* color: black; */
-    font-weight: 900;
+    font-weight: bolder;
 }
 
 
@@ -120,6 +124,11 @@ span {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
+    cursor: pointer;
+}
+
+.nav-bar ul li:hover,.nav-bar input[type='button']:hover {
+    color: #FFFFFF;
 }
 
 .nav-bar input[type='button']{
@@ -134,6 +143,7 @@ span {
     font-weight: 700;
     border: transparent;
     cursor: pointer;
+
 }
 
 #contato {
@@ -453,13 +463,13 @@ span {
     width: 607px;
     height: 567px;
     left: 416px;
-    top: 2251px;
+    top: 2300px;
 }
 
 .blockchain button {
     position: absolute;
-    left: 516px;
-    top: 2851px;
+    left: 476px;
+    top: 2900px;
     background: #545454;
     border-radius: 6px;
     color: #FFFFFF;
@@ -471,6 +481,10 @@ span {
     text-align: center;
     width:450px;
     height:43px;
+}
+
+.blockchain button:hover{
+    color: #FE705D;
 }
 
 #barra {
@@ -677,7 +691,7 @@ span {
 .juridic button {
     position: absolute;
     left: 97px;
-    top: 4662px;    
+    top: 4750px;    
     background: #545454;
     border-radius: 6px;   
     height: 43px;
@@ -690,6 +704,10 @@ span {
     text-align: center;    
     color: #FFFFFF;
     border: transparent;
+}
+
+.juridic button:hover {
+    color: #FE705D;
 }
 
 .juridic #barra {
@@ -809,6 +827,11 @@ span {
     color: #BF1700;  
 }
 
+.container-basic button:hover {
+    color: #FFFFFF;
+    background-color: #BF1700;
+}
+
 .tcontainer-standard {
     position: absolute;
     width: 302px;
@@ -900,6 +923,11 @@ span {
     color: #FFFFFF;  
 }
 
+.container-standard button:hover {
+    color: #BF1700;
+    background-color: #FFF;
+}
+
 .tcontainer-premium {
     position: absolute;
     width: 290px;
@@ -978,6 +1006,11 @@ span {
     color: #BF1700;  
 }
 
+.container-premium button:hover {
+    color: #FFFFFF;
+    background-color: #BF1700;
+}
+
 .tcontainer-unlimited {
     position: absolute;
     width: 290px;
@@ -1054,6 +1087,11 @@ span {
     line-height: 20px;
     text-align: center;
     color: #BF1700;  
+}
+
+.container-unlimited button:hover{
+    color: #FFFFFF;
+    background-color: #BF1700;
 }
 
 
@@ -1205,6 +1243,10 @@ span {
     color: #FFFFFF;
 }
 
+.social-media button:hover{
+    color: #FE705D;
+}
+
 /* FOOTER */
 
 footer {
@@ -1212,7 +1254,146 @@ footer {
     width: 100%;
     height: 429px;
     left: 0px;
-    top: 7640px;  
+    top: 7500px;  
     background: #545454;
+}
+
+#caa-img {
+    position: absolute;
+    width: 30.1px;
+    height: 29px;
+    left: 59px;
+    top: 50px;    
+}
+#caa-p {
+    position: absolute;
+    width: 490px;
+    height: 105px;
+    left: 89px;
+    top: 27px;    
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;  
+    color: #FE705D;
+}
+
+#caa-end {
+    position: absolute;
+    width: 490px;
+    height: 105px;
+    left: 49px;
+    top: 57px;   
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;  
+    color: #FE705D;  
+}
+
+#oab-img {
+    position: absolute;
+    width: 30.1px;
+    height: 29px;
+    left: 559px;
+    top: 50px;    
+}
+#oab-p {
+    position: absolute;
+    width: 490px;
+    height: 105px;
+    left: 589px;
+    top: 27px;    
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;  
+    color: #FE705D;
+}
+
+#oab-end {
+    position: absolute;
+    width: 490px;
+    height: 105px;
+    left: 549px;
+    top: 57px;   
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 30px;  
+    color: #FE705D;  
+}
+
+footer #fb {
+    position: absolute;
+    width: 36.15px;
+    height: 37px;
+    top: 50px;
+    left: 1210px;   
+}
+
+footer #tt {
+    position: absolute;
+    width: 36.15px;
+    height: 37px;
+    top: 50px;
+    left: 1266px;   
+}
+
+footer #yt {
+    position: absolute;
+    width: 36.15px;
+    height: 37px;
+    top: 50px;
+    left: 1323px;   
+}
+
+#icp {
+    position: absolute;
+    width: 100.42px;
+    height: 34px;
+    left: 1190.96px;
+    top: 195px;    
+}
+
+#suport {
+    position: absolute;
+    width: 361.51px;
+    height: 21px;
+    left: 49px;
+    top: 200px;    
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;    
+    color: #FE705D;
+}
+
+#wpp {
+    position: absolute;
+    width: 27px;
+    height: 27px;
+    left: 325.62px;
+    top: 225px;
+}
+
+#rights {
+    position: absolute;
+    width: 470.96px;
+    height: 56px;
+    left: 514.14px;
+    top: 290px;  
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    text-align: center;   
+    color: #FE705D;    
 }
 
